@@ -14,6 +14,7 @@
 - Added hash-mode: RAR3-p (Uncompressed)
 - Added hash-mode: RSA/DSA/EC/OPENSSH Private Keys
 - Added hash-mode: sha1(sha1($pass).$salt)
+- Added hash-mode: SNMPv3 HMAC-SHA1-96
 
 ##
 ## Bugs
